ignore lib files, inprogress updating to circuitpython
in-progress updating to circuitpython

--- a/mainpage.html
+++ b/mainpage.html
@@ -16,15 +16,11 @@
 
   
 <form>
-  <label for="duration">Recording Duration (default 1000ms)</label><br>
-  <input type="text" id="duration" name="duration"><br>
-  <br>
   <label for="outputfile">Output Filename (default IMU_readings.csv)</label> <br>
   <input type="text" id="outputfile" name="outputfile"><br>
   <text> The IMU will append data to the file named, including creating it if required</text>
-
 </form>
 
-  <p><a href="/?led=on"><button class="button">Start Recording</button></a></p>
+  <p><a href="/?IMU=recording"><button class="button">Start Recording</button></a></p>
   
-  <p><a href="/?led=off"><button class="button button2">Stop Recording</button></a></p></body></html>
+  <p><a href="/?IMU=stopped"><button class="button button2">Stop Recording</button></a></p></body></html>
