Edited IMU stack to gather a participant ID from the webpage

--- a/IMU-control-code/mainpage.html
+++ b/IMU-control-code/mainpage.html
@@ -18,7 +18,10 @@
 <form>
   <label for="outputfile">Output Filename (default IMU_readings.csv)</label> <br>
   <input type="text" id="outputfile" name="outputfile"><br>
-  <text> The IMU will append data to the file named, including creating it if required</text>
+  <text> The IMU will append data to the file named, including creating it if required</text><BR>
+    <BR>
+  <label for="ParticipantID">Participant Team ID</label> <br>
+  <input type="text" id="ParticipantID" name="ParticipantID"><br>
 </form>
 
   <p><a href="/?IMU=recording"><button class="button">Start Recording</button></a></p>
